feat:use myself umami

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <script language="javascript">
     if (window.location.host === 'ewm-designer.xdzi8b.cn') {
       const script = document.createElement('script');
-      script.src = 'https://cloud.umami.is/script.js';
+      script.src = 'http://112.125.17.180:3000/script.js';
       script.async = true;
-      script.setAttribute('data-website-id', '36d18aa5-a481-417f-8889-28e20bef8e42');
+      script.setAttribute('data-website-id', 'ce348760-5454-4524-9eae-f0fd6efe8acc');
       document.body.appendChild(script);
     }
   </script>
